# SW_Battle_Emulator

./: .gitignore  CMakeLists.txt  README.md  commands_example_2.txt
src/: main.cpp
src/Core/: Game.cpp  Game.hpp  Map.cpp  Map.hpp  Position.hpp
src/Core/Unit/: Behavior.hpp  BehaviorController.cpp  BehaviorController.hpp  IUnit.cpp  IUnit.hpp  Unit.cpp  Unit.hpp  UnitStats.hpp
src/Features/: Behaviors.hpp  Movement.hpp  Properties.hpp
src/Features/Units/: Hunter.cpp  Hunter.hpp  Swordsman.cpp  Swordsman.hpp  Unit.hpp
src/IO/Commands/: SpawnHunter.hpp  SpawnSwordsman.hpp
src/IO/Events/: MapCreated.hpp  MarchStarted.hpp  UnitAttacked.hpp  UnitMoved.hpp  UnitSpawned.hpp
src/IO/System/: EventLog.hpp
